検索ボタンサンプル

--- a/sample1/index.html
+++ b/sample1/index.html
@@ -69,6 +69,13 @@
             <p><input type="tel"></p>
             <p><input type="text" inputmode="numeric"></p>
             <p><input type="text" inputmode="tel"></p>
+            <div>
+            <form action="https://gardenparty87.jp/?mode=srh" method="get">
+                    <input type="hidden" name="mode" value="srh">
+                    <input type="text" name="keyword">
+                    <button>検索</button>
+            </form>
+            </div>
             <p>眼はみんなを一生けん命たかっこうのなかみんなをあるましようとな手からだを楽譜からおろしながらそれかつめんを居りてしまいなませ。「それにこんこん前のわく。</p>
             <p>ちがう。」うと叩きて弾きましかとついてぎっしり兎にかっこうへそんなになって野ねずみ踏んたた。「正確ます。</p>
             <p>かなりしてやろない。そんなのは代りの狸たのた。みんなをこういうむっと通りないことを。かっこう。かっこうじゃあそんなに顔一日は広くものたなあ。</p>
