--- a/sample1/index.html
+++ b/sample1/index.html
@@ -54,9 +54,12 @@
             <p>しすぎおれはかっこうが黒いだて一生けん命の孔のこども家にくらべ第一ドレミファソラシド曲の身動きが弾いといたです。ぐうぐうねむってしまいましたは今すっていまし。次は万云いゴーシュのようをすうてくれた。子はつぶ外国とそれを云いています。
             </p>
             <div class="image-box">
-                <img src="img/zoom3.jpeg" alt="" class="image-overlap1">
-                <img src="img/zoom4.jpeg" alt="" class="image-overlap2">
+                <img src="img/zoom3.jpeg" alt="" class="image-overlap1" loading="lazy">
+                <img src="img/zoom4.jpeg" alt="" class="image-overlap2" decoding="async">
             </div>
+            <img src="img/zoom3.jpeg"
+                 srcset="img/zoom3.jpeg 480w,
+                 img/zoom4.jpeg 800w">
             <p>火花は兎がしばらくにねむらてゴーシュに火事のようをいうてセロを出てもう扉を行っと来まし。どうかぜひへんで銀に倒れましで。それあんなにに拍子を拭いて子へ死にだまし。むのくらいしかないのでが叩きでしまし。</p>
             <p>「窓へ過ぎます。</p>
             <p>扉、それへゴーシュ。云え。」ここは途中の上のますますこんどのままを出ました。砂糖は狸をお晩へ出て子が扉からするてがたがた午前ししだっきりをしました。</p>
@@ -229,6 +232,7 @@
             <p>猫はつまんました。ではゴーシュはして叫ぶたまし。</p>
             <p>「ゴーシュさん、なくましよご。この耳ですてみんなからはそれかくわえ小屋ではいって思っくださいたな。一拍か三ぴきの風車にしばらくどなりでしね。一ぴき一生けん命とわからましもっと猫たり楽屋まし。近づけだとなってそこほどあわてでものじゃなか、どこ。」
             </p>
+            <img src="https://digitalization-support.jp/img/top/img2.jpg" loading="lazy">
             <p>ひもはわたししていて「いいたね」とゴーシュがありました。「また、にですてまじめたて大きなことはあるね。丈夫の町たひるているでべ。」すきで子が思ってはじめたなら。</p>
             <p>こういう悪評ひどく舞台こそ一心のなかがあけていましでし。だからそして眼をほっとまげたます。</p>
             <p>ところが舌とせて前粉がとりといだとせだ半分のはいがはねあがって「う猫。このところもあるましたなあ。何はとるですのでもましないのます。」とひるましう。</p>
