--- a/sample1/index.html
+++ b/sample1/index.html
@@ -71,6 +71,10 @@
             >
             <p>火花は兎がしばらくにねむらてゴーシュに火事のようをいうてセロを出てもう扉を行っと来まし。どうかぜひへんで銀に倒れましで。それあんなにに拍子を拭いて子へ死にだまし。むのくらいしかないのでが叩きでしまし。</p>
             <p>「窓へ過ぎます。</p>
+            <div class="flex">
+                <div></div>
+                <div></div>
+            </div>
             <p>扉、それへゴーシュ。云え。」ここは途中の上のますますこんどのままを出ました。砂糖は狸をお晩へ出て子が扉からするてがたがた午前ししだっきりをしました。</p>
             <p>がぶがぶきょろきょろむしっながら、わらいながらやりてくるましてこどもにそしてボロンボロンがまるで位なりでしょです。</p>
             <p>「扉い。</p>
