fix(sample3/index.html):外部リンクサンプル追加

--- a/sample3/index.html
+++ b/sample3/index.html
@@ -65,6 +65,10 @@
                 <a href="https://github.com/hiroghap1/hamburger-btn/tree/main/sample3"
                     target="_blank">https://github.com/hiroghap1/hamburger-btn/tree/main/sample3</a>
             </p>
+            <p>ソースコードはこちら<br>
+                <a href="https://github.com/hiroghap1/hamburger-btn/tree/main/sample3"
+                    target="_blank" rel="noopener noreferrer">https://github.com/hiroghap1/hamburger-btn/tree/main/sample3</a>
+            </p>
 
             <h2>ここから下はダミーテキストです</h2>
             <p>おっかさんは愕のきち子みちにけちで見夜中でした。いやどっかりまじめたですという壁ました。愉快んたことたはた実は額の生がいの所をはまるで変ましですて、ここなんてゴーシュが弾いれのたた。</p>
