feat(sample2):HTML変更

--- a/sample1/index.html
+++ b/sample1/index.html
@@ -255,7 +255,7 @@
             <img src="https://digitalization-support.jp/img/top/img2.jpg" loading="lazy">
             <p>ひもはわたししていて「いいたね」とゴーシュがありました。「また、にですてまじめたて大きなことはあるね。丈夫の町たひるているでべ。」すきで子が思ってはじめたなら。</p>
             <p>こういう悪評ひどく舞台こそ一心のなかがあけていましでし。だからそして眼をほっとまげたます。</p>
-            <p>ところが舌とせて前粉がとりといだとせだ半分のはいがはねあがって「う猫。このところもあるましたなあ。何はとるですのでもましないのます。」とひるましう。</p>
+            <p id="last-element">ところが舌とせて前粉がとりといだとせだ半分のはいがはねあがって「う猫。このところもあるましたなあ。何はとるですのでもましないのます。」とひるましう。</p>
         </div>
     </main>
 </body>
